@@ -34,11 +34,11 @@ DETAILS_AT_TOP         = YES
 INHERIT_DOCS           = YES
 DISTRIBUTE_GROUP_DOC   = NO
 TAB_SIZE               = 8
-ALIASES                = "newin2p2=\xrefitem newin2p2s \"Since gtkmm 2.2\" \"New API since gtkmm 2.2\" "\n"" 
-ALIASES                += "newin2p4=\xrefitem newin2p4s \"Since gtkmm 2.4\" \"New API since gtkmm 2.4\" "\n""
-ALIASES                += "newin2p6=\xrefitem newin2p6s \"Since gtkmm 2.6\" \"New API since gtkmm 2.6\" "\n""
-ALIASES                += "newin2p8=\xrefitem newin2p8s \"Since gtkmm 2.8\" \"New API since gtkmm 2.8\" "\n""
-ALIASES                += "newin2p10=\xrefitem newin2p10s \"Since gtkmm 2.10\" \"New API since gtkmm 2.10\" "\n""
+ALIASES                = "newin2p2=\xrefitem newin2p2s \"Since gtkmm 2.2\" \"New API in gtkmm 2.2\" "\n"" 
+ALIASES                += "newin2p4=\xrefitem newin2p4s \"Since gtkmm 2.4\" \"New API in gtkmm 2.4\" "\n""
+ALIASES                += "newin2p6=\xrefitem newin2p6s \"Since gtkmm 2.6\" \"New API in gtkmm 2.6\" "\n""
+ALIASES                += "newin2p8=\xrefitem newin2p8s \"Since gtkmm 2.8\" \"New API in gtkmm 2.8\" "\n""
+ALIASES                += "newin2p10=\xrefitem newin2p10s \"Since gtkmm 2.10\" \"New API in gtkmm 2.10\" "\n""
 OPTIMIZE_OUTPUT_FOR_C  = NO
 OPTIMIZE_OUTPUT_JAVA   = NO
 SUBGROUPING            = YES
